--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p>I've had a bit of website issue. For the time being jump on over to my <a href"https://www.artstation.com/louisdumont">artstation</a></p>
+<p>I've had a bit of website issue. For the time being jump on over to my <a href="https://www.artstation.com/louisdumont">artstation</a></p>
 
 </body>
 </html>
