--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Louis du Mont Digital Artist and Director</title>
+<title>Louis du Mont - Digital Artist and Director</title>
 </head>
 <body>
 
-<p>I've had a bit of website issue. For the time being jump on over to my <a href="https://www.artstation.com/louisdumont">artstation</a></p>
+<p>I've had a few website issues. For the time being, please jump on over to my <a href="https://www.artstation.com/louisdumont">ARTSTATION</a></p>
 
 </body>
 </html>
