--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="col">
 		<img class="style-logo" src="images/louis-du-mont-logo.png" alt="louis logo">
 		<img class="style-portrait" src="images/portrait1_1024.jpg" alt="louis portrait">
-		<p class="style-description">Hi, my name is Louis. I'm a digital artist and director working at <a href="https://vimeo.com/louisdumont"><b>Formation</b></a> on commercial and passion projects.</p>
+		<p class="style-description">Hi, my name is Louis. I'm a digital artist and director working at <a href="https://weareformation.com"><b>Formation</b></a> on commercial and passion projects.</p>
 	<nav class="style-nav">
 		<ul>
 			<li><a href="https://www.artstation.com/louisdumont"><img src="images/artstation.svg" alt="art station"></a></li>
