--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 		<div class="col">
 		<img class="style-logo" src="images/louis-du-mont-logo.png" alt="louis logo">
 		<img class="style-portrait" src="images/portrait1_1024.jpg" alt="louis portrait">
-		<p class="style-description">Hi, my name is Louis. I'm a digital artist and director working at <a href="https://weareformation.com"><b>Formation</b></a> on commercial and passion projects.</p>
+		<p class="style-description">Hi, my name is Louis. I'm a digital artist and director working at <a href="https://vimeo.com/louisdumont"><b>Formation</b></a> on commercial and passion projects.</p>
 	<nav class="style-nav">
 		<ul>
-			<li><a href="https://www.artstation.com/louisdumont"><img src="images/artstation.svg" alt="art station"></a></li>
-			<li><a href="mailto:hi@louisdumont.com"><img src="images/email.svg" alt="email"></a></li>
-			<li><a href="https://twitter.com/louisdumont"><img src="images/twitter.svg" alt="twittwe"></a></li>
-			<li><a href="https://www.linkedin.com/in/louisdumont/"><img src="images/linkedin.svg" alt="linked in"></a></li>
-			<li><a href="https://www.youtube.com/@ldm"><img src="images/youtube.svg" alt="youtube"></a></li>
-			<li><a href="https://vimeo.com/louisdumont"><img src="images/vimeo.svg" alt="vimeo"></a></li>
+			<li><a href="https://www.artstation.com/louisdumont" title="ArtStation"><img src="images/artstation.svg" alt="art station"></a></li>
+			<li><a href="mailto:hi@louisdumont.com" title="email"><img src="images/email.svg" alt="email"></a></li>
+			<li><a href="https://twitter.com/louisdumont" title="Twitter"><img src="images/twitter.svg" alt="twittwe"></a></li>
+			<li><a href="https://www.linkedin.com/in/louisdumont/" title="LinkedIn"><img src="images/linkedin.svg" alt="linked in"></a></li>
+			<li><a href="https://www.youtube.com/@ldm" title="YouTube Tutorials"><img src="images/youtube.svg" alt="youtube"></a></li>
+			<li><a href="https://vimeo.com/louisdumont" title="Vimeo"><img src="images/vimeo.svg" alt="vimeo"></a></li>
 		</ul>
 		</nav>
 		</div>
@@ -32,33 +32,33 @@
 		
 		<div class="gallery">
   <figure class="gallery__item gallery__item--1">
-	<a href="https://www.artstation.com/artwork/Jle65Z">
+	<a href="https://www.artstation.com/artwork/Jle65Z" title="Isometropolis PD">
     <img src="images/louis-du-mont-isometropolis-0006-office.jpg" class="gallery__img" alt="Image 1">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--2">
-	<a href="https://www.artstation.com/artwork/qQrOOa">
+	<a href="https://www.artstation.com/artwork/qQrOOa" title="Halloween Supprise">
     <img src="images/louis-du-mont-thumbnailsq-copy.jpg" class="gallery__img" alt="Image 2">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--3">
-	<a href="https://www.artstation.com/artwork/03XLVe">
+	<a href="https://www.artstation.com/artwork/03XLVe" title="BT Sport Series">
     <img src="images/louis-du-mont-50447819222-cd088c9d2a-o (1).jpg" class="gallery__img" alt="Image 3">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--4">
-	  	<a href="https://www.artstation.com/artwork/PoyW5o">
+	  	<a href="https://www.artstation.com/artwork/PoyW5o" title="Herbert the Frog">
     <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/159/030/still-2.mp4" playsinline class="gallery__img" alt="Image 6"></video>
 	</a>
 
   </figure>
   <figure class="gallery__item gallery__item--5">
-	  <a href="https://www.artstation.com/artwork/zOqg3L">
+	  <a href="https://www.artstation.com/artwork/zOqg3L" title="18% Human">
     <img src="images/louis-du-mont-guy2crop.jpg" class="gallery__img" alt="Image 5">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--6">
-	<a href="https://www.artstation.com/artwork/q9ZwJn">
+	<a href="https://www.artstation.com/artwork/q9ZwJn" title="Turbo 386">
     <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/157/134/turntable1-3.mp4" playsinline class="gallery__img" alt="Image 4"></video>
 	</a>
   </figure>
