--- a/index.html
+++ b/index.html
@@ -62,11 +62,27 @@
     <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/157/134/turntable1-3.mp4" playsinline class="gallery__img" alt="Image 4"></video>
 	</a>
   </figure>
+			  <figure class="gallery__item gallery__item--7">
+	  <a href="https://www.artstation.com/artwork/vdo4v" title="Visiting">
+    <img src="images/louis-du-mont-visiting-credit-louis-du-mont-3.jpg" class="gallery__img" alt="Image 5">
+	</a>
+  </figure>
 </div>
 
 	</main>
-	
-	<footer></footer>
+	<youtube></youtube>
+	<footer class="footer">
+			<nav class="style-nav">
+		<ul>
+			<li><a href="https://www.artstation.com/louisdumont" title="ArtStation"><img src="images/artstation.svg" alt="art station"></a></li>
+			<li><a href="mailto:hi@louisdumont.com" title="email"><img src="images/email.svg" alt="email"></a></li>
+			<li><a href="https://twitter.com/louisdumont" title="Twitter"><img src="images/twitter.svg" alt="twittwe"></a></li>
+			<li><a href="https://www.linkedin.com/in/louisdumont/" title="LinkedIn"><img src="images/linkedin.svg" alt="linked in"></a></li>
+			<li><a href="https://www.youtube.com/@ldm" title="YouTube Tutorials"><img src="images/youtube.svg" alt="youtube"></a></li>
+			<li><a href="https://vimeo.com/louisdumont" title="Vimeo"><img src="images/vimeo.svg" alt="vimeo"></a></li>
+		</ul>
+		</nav>
+	</footer>
 	
 </body>
 </html>
