--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
 <meta charset="utf-8">
 <title>Louis du Mont - Digital Artist and Director</title>
 	<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
-	
+	<div class="banner">
+	<div class="banner-content">
+	<div class="banner-text">
+		New Blender robotic hard-surface modeling course available! <a href="https://cgboost.com/robots" target="_blank">Learn more</a>
+		</div>
+<!--
+		<a href="https://cgboost.com/robots"><button class="banner-close" type="button"><span class="material-symbols-outlined">
+expand_circle_right
+			</span></button></a>
+-->
+		</div>
+		</div>
+	<div class="header-wrap">
+<img
+    class="header-img"
+    src="images/CGBoost_Header.jpg"
+    alt="Robotic Planet"
+  > 
+</div>
 	<header>
 		<div class="row">
 		<div class="col">
@@ -32,7 +51,7 @@
 		
 		<div class="gallery">
   <figure class="gallery__item gallery__item--1">
-	<a href="https://www.artstation.com/artwork/Jle65Z" title="Isometropolis PD">
+	<a href="p1.html" title="Isometropolis PD">
     <img src="images/louis-du-mont-isometropolis-0006-office.jpg" class="gallery__img" alt="Image 1">
 	</a>
   </figure>
