--- a/index.html
+++ b/index.html
@@ -56,33 +56,33 @@ expand_circle_right
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--2">
-	<a href="https://www.artstation.com/artwork/qQrOOa" title="Halloween Supprise">
+	<a href="p5.html" title="Halloween Supprise">
     <img src="images/louis-du-mont-thumbnailsq-copy.jpg" class="gallery__img" alt="Image 2">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--3">
-	<a href="https://www.artstation.com/artwork/03XLVe" title="BT Sport Series">
+	<a href="p3.html" title="BT Sport Series">
     <img src="images/louis-du-mont-50447819222-cd088c9d2a-o (1).jpg" class="gallery__img" alt="Image 3">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--4">
-	  	<a href="https://www.artstation.com/artwork/PoyW5o" title="Herbert the Frog">
+	  	<a href="p2.html" title="Herbert the Frog">
     <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/159/030/still-2.mp4" playsinline class="gallery__img" alt="Image 6"></video>
 	</a>
 
   </figure>
   <figure class="gallery__item gallery__item--5">
-	  <a href="https://www.artstation.com/artwork/zOqg3L" title="18% Human">
+	  <a href="p7.html" title="18% Human">
     <img src="images/louis-du-mont-guy2crop.jpg" class="gallery__img" alt="Image 5">
 	</a>
   </figure>
   <figure class="gallery__item gallery__item--6">
-	<a href="https://www.artstation.com/artwork/q9ZwJn" title="Turbo 386">
+	<a href="p4.html" title="Turbo 386">
     <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/157/134/turntable1-3.mp4" playsinline class="gallery__img" alt="Image 4"></video>
 	</a>
   </figure>
 			  <figure class="gallery__item gallery__item--7">
-	  <a href="https://www.artstation.com/artwork/vdo4v" title="Visiting">
+	  <a href="p6.html" title="Visiting">
     <img src="images/louis-du-mont-visiting-credit-louis-du-mont-3.jpg" class="gallery__img" alt="Image 5">
 	</a>
   </figure>
@@ -91,7 +91,9 @@ expand_circle_right
 	</main>
 	<youtube class="youtube">
 		<h2>Latest YouTube Video</h2>
-		<iframe src="https://www.youtube.com/embed?listType=playlist&list=UULF_tgj085Gae2bBDJ7OJZrMw"></iframe></youtube>
+		<iframe
+  src="https://www.youtube.com/embed?listType=playlist&list=UULF_tgj085Gae2bBDJ7OJZrMw">
+</iframe></youtube>
 	<footer class="footer">
 			<nav class="style-nav">
 		<ul>
