--- a/p6.html
+++ b/p6.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Louis du Mont - Digital Artist and Director - Isometropolis PD</title>
+<title>Louis du Mont - Digital Artist and Director - Visiting</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -33,17 +33,13 @@
 <port class="portfolio-1">
 		
 	<main>
-		<div class="copy1"><h1><!-- InstanceBeginEditable name="Project Title" -->Isometropolis PD<!-- InstanceEndEditable --></h1>
+		<div class="copy1"><h1><!-- InstanceBeginEditable name="Project Title" -->Visiting<!-- InstanceEndEditable --></h1>
 		<br>
-			<!-- InstanceBeginEditable name="Video iframe" -->
-			  <div style="padding:56.25% 0 0 0;position:relative;">
-			  <iframe src="https://player.vimeo.com/video/303519795?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Isometropolis PD"></iframe>
-			</div><script src="https://player.vimeo.com/api/player.js"></script>
-			<!-- InstanceEndEditable -->
+			<!-- InstanceBeginEditable name="Video iframe" --><div style="padding:41.89% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/124408545?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Visiting Episode 1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script><!-- InstanceEndEditable -->
 			<br>
 			
 			<div class="copy2"><!-- InstanceBeginEditable name="Description" -->
-			  <p>A collection of 3D scenes inspired by TV cop dramas, weaved into a sort of show intro, that doesn't exist... yet.</p>
+			  <p>A short film featuring an intrepid explorer who looses there trusty ship.</p>
 			<!-- InstanceEndEditable -->
 			</div>
 			More
