--- a/p2.html
+++ b/p2.html
@@ -48,7 +48,7 @@
 		
 		<div class="gallery2">
   <figure class="gallery2__item gallery2__item--1">
-	<a href="https://www.artstation.com/artwork/Jle65Z" title="Isometropolis PD">
+	<a href="p1.html" title="Isometropolis PD">
     <img src="images/louis-du-mont-isometropolis-0006-office.jpg" class="gallery2__img" alt="Image 1">
 	</a>
   </figure>
