--- a/p5.html
+++ b/p5.html
@@ -33,7 +33,7 @@
 <port class="portfolio-1">
 		
 	<main>
-		<div class="copy1"><h1><!-- InstanceBeginEditable name="Project Title" -->Scary Maze, A Holloween Animatin<!-- InstanceEndEditable --></h1>
+		<div class="copy1"><h1><!-- InstanceBeginEditable name="Project Title" -->Scary Maze, A Holloween AnimatiOn<!-- InstanceEndEditable --></h1>
 		<br>
 			<!-- InstanceBeginEditable name="Video iframe" --><div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/765428047?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Scary Maze - Happy Halloween!"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script><!-- InstanceEndEditable -->
 			<br>
@@ -47,7 +47,7 @@
 		
 		<div class="gallery2">
   <figure class="gallery2__item gallery2__item--1">
-	<a href="https://www.artstation.com/artwork/Jle65Z" title="Isometropolis PD">
+	<a href="p1.html" title="Isometropolis PD">
     <img src="images/louis-du-mont-isometropolis-0006-office.jpg" class="gallery2__img" alt="Image 1">
 	</a>
   </figure>
