--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ expand_circle_right
   </figure>
   <figure class="gallery__item gallery__item--4">
 	  	<a href="p2.html" title="Herbert the Frog">
-    <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/159/030/still-2.mp4" playsinline class="gallery__img" alt="Image 6"></video>
+    <video autoplay loop muted src="images/frog.mp4" playsinline class="gallery__img" alt="Image 6"></video>
 	</a>
 
   </figure>
