--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ expand_circle_right
   </figure>
   <figure class="gallery__item gallery__item--6">
 	<a href="p4.html" title="Turbo 386">
-    <video autoplay loop muted src="https://cdn-animation.artstation.com/p/video_sources/000/157/134/turntable1-3.mp4" playsinline class="gallery__img" alt="Image 4"></video>
+    <video autoplay loop muted src="images/Turbo.mp4" playsinline class="gallery__img" alt="Image 4"></video>
 	</a>
   </figure>
 			  <figure class="gallery__item gallery__item--7">
